@@ -12,6 +12,7 @@
     <extension point="xbmc.addon.metadata">
         <news>
 [add] audio only to quality selection
+[add] Age gate enforcement - Settings -> General
 [fix/upd] use select dialog for subtitle setting
     - [add] Configure subtitles to Settings -> General
     - [add] Current language with No auto-generated subtitles option
