@@ -45,7 +45,7 @@ def get_player_config(client, url):
 
     try:
         player_config = json.loads(_player_config)
-    except:
+    except TypeError:
         player_config = dict()
 
     if not player_config:
@@ -55,8 +55,18 @@ def get_player_config(client, url):
         else:
             try:
                 player_config = json.loads(blank_config.group('player_config'))
-            except:
+            except TypeError:
                 player_config = dict()
+
+    if not player_config.get('args', {}).get('player_response'):
+        result = re.search('window\["ytInitialPlayerResponse"\]\s*=\s*\(\s*(?P<player_response>{.+?})\s*\);', html)
+        player_config['args']['player_response'] = '{}' if not result else result.group('player_response')
+
+    if isinstance(player_config.get('args', {}).get('player_response'), basestring):
+        try:
+            player_config['args']['player_response'] = json.loads(player_config['args']['player_response'])
+        except TypeError:
+            player_config['args']['player_response'] = dict()
 
     return player_config
 
